@@ -1,24 +1,12 @@
 #!/bin/sh
 # Run this to generate all the initial makefiles, etc.
 
-ACLOCAL=${ACLOCAL:-aclocal}
-AUTOHEADER=${AUTOHEADER:-autoheader}
-AUTOMAKE=${AUTOMAKE:-automake}
-AUTOMAKE_FLAGS="--add-missing --copy"
-AUTOCONF=${AUTOCONF:-autoconf}
-
-ARGV0=$0
-
 set -e
 
+if [ ! -f configure.ac -o ! -f COPYING ]; then
+	echo "Doesn't look like you're in the source directory" >&2
+	exit 1
+fi
 
-run() {
-	echo "$ARGV0: running \`$@'"
-	$@
-}
-
-run $ACLOCAL $ACLOCAL_FLAGS
-run $AUTOHEADER
-run $AUTOMAKE $AUTOMAKE_FLAGS
-run $AUTOCONF
+autoreconf --force --install
 echo "Now type './configure ...' and 'make' to compile."
