@@ -8,6 +8,7 @@ NEWS
   * Add -b backlog option (fixes #2422, patch by aschmitz)
   * Restrict Unix socket file ownership by default to ug=rw
   * Add example apparmor spawn-fcgi abstraction
+  * Use autoreconf instead of calling tools manually
 
 - 1.6.3 - 2009-09-23
   * Fix unix socket mode change to work without specifying user/group for socket
